Fix sidebar connector icon

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -101,6 +101,7 @@
   "connector.connectedWebsites.permissions.videoLink": "the video introduction",
   "connector.connectedWebsites.permissions.enable": "enable",
   "connector.appName": "DApp connector",
+  "connector.connector": "Connector",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.connector.connectedWebsites": "Connected Websites",
   "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
