--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -289,6 +289,7 @@
   "settings.menu.support.link.label": "Support / Logs",
   "settings.menu.termsOfUse.link.label": "Terms of use",
   "settings.menu.wallet.link.label": "Wallet",
+  "settings.menu.permissions.link.label": "Permissions",
   "settings.noexternal.dialog.content": "Your memos are stored locally. They will not automatically sync with other Yoroi instances and will be lost if you delete Yoroi",
   "settings.noexternal.dialog.title": "No external storage",
   "settings.paperWallet.createPaper.label": "Create Paper Wallet",
