Edit landuage json file

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -347,6 +347,9 @@
   "settings.unitOfAccount.lastUpdated": "<strong>Last updated:</strong> {lastUpdated}",
   "settings.unitOfAccount.note": "<strong>Note:</strong> coin price is approximate and may not match the price of any given trading platform. Any transactions based on these price approximates are done at your own risk.",
   "settings.unitOfAccount.title": "Currency Conversion",
+  "settings.permissions.cardanoPaymentExplained": "Yoroi will allow you to generate special links in Receive page and share it in order to receive payment faster and easier. You can always enable this feature in the Settings.",
+  "settings.permissions.accessToDapps": "Access to dapps",
+  "settings.permissions.accessToDappsExplained": "It will allow you to connect any dapps to Yoroi wallets and enable to participate in any activities that the dApp permits such as purchasing or selling tokens, gaining access to resources, or using other features offered by the dApp.",
   "sidebar.assets": "Assets",
   "sidebar.connectedWebsites": "Connected websites",
   "sidebar.faq": "Faq",
