--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -91,7 +91,9 @@
   "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
   "ergo-connector.connect.noWalletsFound": "No {network} wallets found.",
   "ergo-connector.label.connect": "Connect to",
+  "ergo-connector.label.connectWallet": "Connect Wallet",
   "ergo-connector.label.selectAllWallets": "Select all wallets",
+  "ergo-connector.label.yourWallets": "Your Wallets",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.connector.connectedWebsites": "Connected Websites",
   "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
