--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -89,7 +89,7 @@
   "daedalusTransfer.waiting.warning": "This may take a long time or fail on poor internet connections",
   "decryption.label": "Decryption password",
   "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
-  "ergo-connector.connect.noWalletsFound": "No {network} wallets found.",
+  "ergo-connector.connect.noWalletsFound": "Ooops, No {network} wallets found.",
   "ergo-connector.label.connect": "Connect to",
   "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
