--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -90,6 +90,7 @@
   "decryption.label": "Decryption password",
   "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
   "ergo-connector.connect.noWalletsFound": "Ooops, No {network} wallets found.",
+  "ergo-connector.connect.createWallet": "create wallet",
   "ergo-connector.label.connect": "Connect to",
   "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
