--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -63,6 +63,8 @@
   "connector.signin.txDetails": "Transaction Details",
   "connector.signin.receiver": "Receiver",
   "connector.signin.more": "more",
+  "connector.settings.signTransaction": "Sign transaction",
+  "connector.settings.connect": "Connect",
   "connector.settings.about": "About",
   "connector.settings.about.dAppDescription": "The dApp connector allows dApps (decentralized applications) in the form of web pages to interact in a secure manner with the user's Yoroi Ergo wallets to enable smart contract functionality.",
   "connector.settings.about.dAppInfo": "What is the dApp connector?",
