--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -92,6 +92,7 @@
   "ergo-connector.connect.noWalletsFound": "No {network} wallets found.",
   "ergo-connector.label.connect": "Connect to",
   "ergo-connector.label.connectWallet": "Connect Wallet",
+  "ergo-connector.label.connectWalletAuthRequest": "Enter your spending password to allow the dApp to identify you via your wallet",
   "ergo-connector.label.selectAllWallets": "Select all wallets",
   "ergo-connector.label.yourWallets": "Your Wallets",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
