--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -96,6 +96,7 @@
   "ergo-connector.label.connect": "Connect to",
   "ergo-connector.label.connectWallet": "Connect Wallet",
   "ergo-connector.label.connectWalletAuthRequest": "Enter your spending password to allow the dApp to identify you via your wallet",
+  "ergo-connector.label.connectWalletNoHardwareSupported": "Note, hardware wallets are not supported for the dapp connecting yet.",
   "ergo-connector.label.selectAllWallets": "Select all wallets",
   "ergo-connector.label.yourWallets": "Your Wallets",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
